--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Øystein Bedin
-  description: Principal Architect
+  description: Role to Query kubernetes/openshift resources and return values based on input parameters
   company: Red Hat, Inc.
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: Apache-2.0
 
   min_ansible_version: 2.7
 
@@ -42,9 +42,9 @@ galaxy_info:
   galaxy_tags:
     - openshift
     - oc
-    - k8s_facts
     - kubernetes
     - kubectl
+    - k8s
 
 dependencies: []
   
